--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -47,6 +47,11 @@ $reverse: #fff;
 $warm-grey: #1D2831;
 $cobolt-blue: #0176EA;
 
+/* project two colors */
+$bright-blue: #2100A4;
+$light-salmon: #FF948D;
+$light-red: #FF4533;
+
 /* util colors */
 $danger-color: $red; // Bad color for errors, validation etc.
 $success-color: $green; // Good color for success etc.
