--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -18,9 +18,8 @@
 @import "pages/layout";
 @import "pages/home";
 @import "pages/ux";
-@import "pages/interactive";
+@import "pages/aboutme";
 @import "pages/prototype";
-@import "pages/about";
 
 
 // Additional styles to think about
