--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -59,6 +59,7 @@ nav {
 	right: 4%;
 	z-index: 20;
 	cursor: pointer;
+	// transform: translateX(-50%);
 
 	#menu {
   width:50px;
@@ -66,13 +67,13 @@ nav {
 
 	.menu-container {
 		width: 40px;
-		height: 15px;
+		height: 20px;
 		overflow: hidden;
 
 		.menu-bar {
 		  background: $salmon;
 		  width: 40px;
-		  height: 1px;
+		  height: 2px;
 	 	 	margin-bottom: 6px;
 	 	 	transform: translateX(10px)
 		}
