--- a/css/sass/pages/_aboutme.scss
+++ b/css/sass/pages/_aboutme.scss
@@ -17,7 +17,7 @@
 	}
 
 	h1 {
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		font-size: 1.5em;
 		font-family: $bold_avant;
 		line-height: 1em;
@@ -115,7 +115,7 @@
 @media (min-width: 1200px) {
 		.about-me {
 		h1 {
-			font-size: 4em;
+			font-size: 5em;
 		}
 
 		.skills{	
