--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -34,7 +34,8 @@ $silver: #ddd;
 $grey:   #aaa;
 $black:  #111;
 
-/* project colors */
+/* project colors - this project colors need assigned to these variables once you comfirm color scheme */
+
 $primary-color: #1271db;
 $secondary-color: #233e5b;
 $tertiary-color: #aaa;
@@ -47,7 +48,7 @@ $reverse: #fff;
 $warm-grey: #1D2831;
 $cobolt-blue: #0176EA;
 
-/* project two colors */
+/* project two colors */ 
 $bright-blue: #2100A4;
 $light-salmon: #FF948D;
 $light-red: #FF4533;
