--- a/css/sass/pages/_aboutme.scss
+++ b/css/sass/pages/_aboutme.scss
@@ -3,6 +3,14 @@
 
 /* Mobile first queries */
 .about-me {
+
+	.wrapper-container {
+	max-width: 960px;
+	height: 100vh;
+  padding: 30px;
+
+	}
+
 	h1,
 	h2, 
 	h3, 
@@ -11,9 +19,6 @@
 	p {
 		color: $bright-blue;
 		text-align: center;
-	}
-	.wrapper-container {
-		padding: 30px;
 	}
 
 	h1 {
@@ -115,7 +120,7 @@
 @media (min-width: 1200px) {
 		.about-me {
 		h1 {
-			font-size: 5em;
+			font-size: 3.5em;
 		}
 
 		.skills{	
