--- a/css/sass/pages/_ux.scss
+++ b/css/sass/pages/_ux.scss
@@ -6,9 +6,11 @@
  */
 
 .ux {
+	text-align: center;
+
 	h1, h2, h3 {
 		font-family: $medium;
-		text-transform: uppercase;
+		
 	}
 	h1 {
 		font-size: 1.5em;
@@ -18,8 +20,9 @@
 .ux-slide-01 {
 	background: url(../img/test-background.jpeg) no-repeat center center; 
   background-size: cover;
-	text-align: center;
-
+	h1 {
+		text-transform: uppercase;
+	}
 	// .p-symbol-container svg {
 	// 	position: absolute;
 	// 	fill: #24305e;
@@ -40,18 +43,18 @@
 
 .ux-slide-02 {
 	background: #1f2a52;
-	.wrapper-container {
-		display: flex;
-		flex-direction: column;
-		.ux-image{
-      width: 35%;
-      margin: 100px auto 0;
-      img {
-       width: 100%;
-      }
-  	}
+
+	.ux-image{
+    width: 55%;
+    margin: 60px 0 20px;
 	}
+
+
+
+
 }
+
+
 
 .ux-slide-03 {
 	// background: #1f2a52;
