--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -62,5 +62,5 @@ $subtle-color: $grey; // Subtle color for subtle text
 
 /* global background color */
 html {
-	// background: $dark-blue;
+	background: $dark-blue;
 }
