--- a/css/sass/components/_buttons.scss
+++ b/css/sass/components/_buttons.scss
@@ -6,8 +6,8 @@
 .btn {
   border-radius: $btn-br;
   background: transparent;
-  border: 1px solid $primary-color;
-  color: $primary-color;
+  border: 1px solid $reverse;
+  color: $reverse;
   display: inline-block;
   height: $line-height;
   outline: none;
