--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -17,7 +17,7 @@
 // Specific project styles, add any section specific sass modules here
 @import "pages/layout";
 @import "pages/home";
-@import "pages/ux";
+@import "pages/user-interface";
 @import "pages/aboutme";
 @import "pages/prototype";
 
