--- a/css/sass/pages/_aboutme.scss
+++ b/css/sass/pages/_aboutme.scss
@@ -17,7 +17,7 @@
 	h4, 
 	h5, 
 	p {
-		color: $bright-blue;
+		color: $salmon;
 		text-align: center;
 	}
 
@@ -29,7 +29,7 @@
 	}
 
 	.skills{
-		color: $bright-blue;
+		color: $salmon;
 		font-family: $medium_avant;
 
 		display: flex;
@@ -48,7 +48,7 @@
 		#rayfinn-logo {
 		  width: 70%;
 		  fill: transparent;
-		  stroke: $bright-blue;
+		  stroke: $salmon;
 		  // visibility: hidden;
 		}
 	}
