--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -17,8 +17,9 @@
 // Specific project styles, add any section specific sass modules here
 @import "pages/layout";
 @import "pages/home";
+@import "pages/about";
 @import "pages/user-interface";
-@import "pages/aboutme";
+@import "pages/interaction";
 @import "pages/prototype";
 
 
