--- a/css/sass/pages/_interaction.scss
+++ b/css/sass/pages/_interaction.scss
@@ -1,22 +1,11 @@
-/* USER INTERFACE AND DESIGN
+/* INTERACTION
    ========================================================================== */
 
 /**
  * MOBILE FIRST QUERIES
  */
 
-.p-background-icon {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	img {
-		opacity: 0.08;
-		width: 500px;
-	}
-}
-
-.user-interface {
+.interaction {
 	text-align: center;
 
 	h1, h2, h3 {
@@ -28,8 +17,8 @@
 	}
 }
 
-.ui-container {
-	background: $salmon;
+.interaction-container {
+	background: $dark-blue;
 
 	h1 {
 		text-transform: uppercase;
@@ -40,12 +29,11 @@
 }
 
 
-
 /**
  * LARGER THAN MOBILE
  */
 @media (min-width: 400px) {
-	.ui-container {
+	.interaction-container {
 		.quote-text {
 			font-size: 1.7em;
 		}
@@ -65,7 +53,7 @@
  */
 @media screen and (min-width: 750px) {
 	
-	.ui-container {
+	.interaction-container {
 		article {
 			width: 70%;
 			text-align: left;
@@ -86,7 +74,6 @@
 	}
 
 }
-
 
 
 /* Larger than desktop */
