--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -9,6 +9,7 @@
 @import "base/type";
 
 // Import reusable modules
+@import "components/preloader";
 @import "components/buttons";
 @import "components/nav";
 @import "components/other";
