--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -40,11 +40,12 @@ $primary-color: #1271db;
 $secondary-color: #233e5b;
 $tertiary-color: #aaa;
 
+$reverse: #FEFEE6;
+
 $salmon: #E94444;
 $dark-blue: #2b2769;
 $light-blue: #33b2ff;
 $pink: #F15FA8;
-$reverse: #fff;
 $warm-grey: #1D2831;
 $cobolt-blue: #0176EA;
 
