--- a/css/sass/components/_preloader.scss
+++ b/css/sass/components/_preloader.scss
@@ -55,7 +55,7 @@
   display: inline-block;
   position: absolute;
   top: 0;
-  background-color: #333;
+  background-color: #fff;
   border-radius: 100%;
   
   -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
