--- a/css/main.css
+++ b/css/main.css
@@ -436,7 +436,7 @@ html {
       -ms-flex: 1;
           flex: 1; }
 
-.flexRowStart {
+.flex-row-start {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -486,7 +486,7 @@ html {
       flex-basis: 100%;
   max-width: 100%; }
 
-.isHalf {
+.is-half {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
   margin: 0 1px;
@@ -766,30 +766,35 @@ a {
 .logo.active-logo {
   display: inherit; }
 
-nav {
+/**
+ * FULL PAGE NAVIGATION
+ */
+.fp-nav-wrapper {
   position: fixed;
   z-index: 12;
   background: #000;
   width: 100%;
-  height: 100%;
-  text-align: center;
-  color: #fff; }
-  nav ul {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%); }
-    nav ul li {
-      list-style: none; }
-      nav ul li a {
-        font-size: 35px;
-        text-decoration: none;
-        color: inherit; }
+  height: 100%; }
 
-.main-nav-hide,
-.about-page-hide {
-  display: none; }
+.menu-container {
+  max-width: 1200px; }
+
+.nav-content {
+  text-align: right;
+  font-size: 4em;
+  font-family: avant_bold, sans-serif;
+  margin-right: 75px; }
+  .nav-content li {
+    list-style-type: none; }
+    .nav-content li a {
+      color: #FEFEE6;
+      text-decoration: none; }
+
+.nav-content-text {
+  margin-left: 75px; }
+  .nav-content-text h2 {
+    font-size: 2.5em;
+    font-family: avant_light, sans-serif; }
 
 /**
  * HAMBURGER TOGGLE MENU
@@ -802,11 +807,11 @@ nav {
   cursor: pointer; }
   .navbar-toggle #menu {
     width: 50px; }
-  .navbar-toggle .menu-container {
+  .navbar-toggle .hamburger-container {
     width: 40px;
     height: 20px;
     overflow: hidden; }
-    .navbar-toggle .menu-container .menu-bar {
+    .navbar-toggle .hamburger-container .menu-bar {
       background: #E94444;
       width: 40px;
       height: 2px;
@@ -865,10 +870,6 @@ nav {
   .social-main {
     visibility: hidden; } }
 
-/**
- * RIGHT VERTICAL NAV BAR
- * Have turned off for now
- */
 * {
   box-sizing: border-box !important; }
 
