add responsive full psge nav

--- a/css/sass/base/_flex.scss
+++ b/css/sass/base/_flex.scss
@@ -55,7 +55,7 @@
 .justifyEnd {
     justify-content: flex-end;
 }
-.justifyStart {
+.justify-start {
     justify-content: flex-start;
 }
 .contentCenter {
@@ -67,7 +67,7 @@
 .alignEnd {
     align-items: flex-end;
 }
-.alignStart {
+.align-start {
     align-items: flex-start;
 }
 .alignBaseline {
