--- a/css/main.css
+++ b/css/main.css
@@ -345,7 +345,7 @@ html {
       -ms-flex-pack: end;
           justify-content: flex-end; }
 
-.justifyStart {
+.justify-start {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start; }
@@ -366,7 +366,7 @@ html {
               -ms-grid-row-align: flex-end;
           align-items: flex-end; }
 
-.alignStart {
+.align-start {
   -webkit-box-align: start;
       -ms-flex-align: start;
               -ms-grid-row-align: flex-start;
@@ -767,36 +767,6 @@ a {
   display: inherit; }
 
 /**
- * FULL PAGE NAVIGATION
- */
-.fp-nav-wrapper {
-  position: fixed;
-  z-index: 12;
-  background: #000;
-  width: 100%;
-  height: 100%; }
-
-.menu-container {
-  max-width: 1200px; }
-
-.nav-content {
-  text-align: right;
-  font-size: 4em;
-  font-family: avant_bold, sans-serif;
-  margin-right: 75px; }
-  .nav-content li {
-    list-style-type: none; }
-    .nav-content li a {
-      color: #FEFEE6;
-      text-decoration: none; }
-
-.nav-content-text {
-  margin-left: 75px; }
-  .nav-content-text h2 {
-    font-size: 2.5em;
-    font-family: avant_light, sans-serif; }
-
-/**
  * HAMBURGER TOGGLE MENU
  */
 .navbar-toggle {
@@ -819,36 +789,94 @@ a {
       -webkit-transform: translateX(10px);
               transform: translateX(10px); }
 
-/* FOOTER ELEMENTS
-   ========================================================================== */
 /**
- * PERSONAL PORTFOLIO WATERMARK
+ * FULL PAGE NAVIGATION
  */
-.watermark-text {
-  font-size: .4em;
-  color: #E94444;
-  font-family: avant_book, sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  position: absolute;
-  left: 2%;
-  bottom: 2%;
-  z-index: 100; }
-  .watermark-text .rath {
-    font-family: avant_bold, sans-serif; }
+.fp-nav-wrapper {
+  position: fixed;
+  z-index: 12;
+  background: #000;
+  width: 100%;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
 
-@media (max-width: 550px) {
-  .watermark-text {
-    visibility: hidden; } }
+.menu-container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 30px;
+  margin-top: 50px; }
+
+.nav-content {
+  font-family: avant_bold, sans-serif;
+  margin-left: 20px; }
+  .nav-content ul {
+    padding: 0; }
+  .nav-content li {
+    list-style-type: none;
+    font-size: 2.5em; }
+    .nav-content li a {
+      color: #FEFEE6;
+      text-decoration: none;
+      cursor: pointer; }
+
+.nav-content-text {
+  display: none; }
+
+/* Larger than mobile */
+/* Larger than phablet */
+/* Larger than tablet */
+/* Larger than desktop */
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {
+  .fp-nav-wrapper {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+                -ms-grid-row-align: center;
+            align-items: center; }
+  .menu-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 30px;
+    margin-top: 50px;
+    max-width: 1200px; }
+  .nav-content {
+    margin-left: 0; }
+    .nav-content li {
+      font-size: 4em;
+      text-align: right; }
+      .nav-content li a {
+        color: #FEFEE6;
+        text-decoration: none;
+        cursor: pointer; }
+  .nav-content-text {
+    display: inherit;
+    margin-left: 75px; }
+    .nav-content-text p {
+      font-size: 2.5em;
+      font-family: avant_light, sans-serif; } }
 
 /**
- * SOCIAL/CONTACT BAR AT RIGHTHAND CORNER OF PAGE
+ * FOOTER ELEMENTS - SOCIAL/CONTACT BAR AT RIGHTHAND CORNER OF PAGE
  */
 .social-main {
   z-index: 101;
   position: absolute;
-  right: 2%;
-  bottom: 2%; }
+  right: 4%;
+  bottom: 4%; }
   .social-main .contact,
   .social-main .contact-item,
   .social-main .about-btn {
@@ -930,6 +958,12 @@ hr {
   .pulse .pulse-button {
     stroke: #E94444; }
 
+/* UX - Prototype */
+/* Larger than mobile */
+/* Larger than phablet */
+/* Larger than tablet */
+/* Larger than desktop */
+/* Larger than Desktop HD */
 /* Homepage - Main Laning page */
 /* Mobile first queries */
 .main-landing-page {
