--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -4,7 +4,8 @@
 /* Mobile first queries */
 
 .main-landing-page {
-		background: $dark-blue;
+		// background: $dark-blue;
+		background: #1D2A46;
 
 		.container {
 			img {
