--- a/css/sass/pages/_interaction.scss
+++ b/css/sass/pages/_interaction.scss
@@ -18,7 +18,8 @@
 }
 
 .interaction-container {
-	background: $dark-blue;
+	// background: $dark-blue;
+	background: #1D2A46;
 
 	h1 {
 		text-transform: uppercase;
