fix naivation page on prototyping page

--- a/css/main.css
+++ b/css/main.css
@@ -189,7 +189,7 @@ html.fp-enabled,
 /* util colors */
 /* global background color */
 html {
-  background: #2b2769; }
+  background: #1D2A46; }
 
 .clearfix,
 .group {
