--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -43,7 +43,7 @@ $tertiary-color: #aaa;
 $reverse: #FEFEE6;
 
 $salmon: #E94444;
-$dark-blue: #2b2769;
+$dark-blue: #1D2A46;
 $light-blue: #33b2ff;
 $pink: #F15FA8;
 $warm-grey: #1D2831;
