--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -4,8 +4,7 @@
 /* Mobile first queries */
 
 .main-landing-page {
-		// background: $dark-blue;
-		background: #1D2A46;
+		background: $dark-blue;
 
 		.container {
 			img {
